# uriel

./: BP.md  BookOfOrigin.md  EXODUS.md  README.md
c-clock/: CMakeLists.txt  main.c
shaders/: black_rainbow.c  quanta.c  trip.c
sokol/src/: .gitignore  CMakeLists.txt  build_wasm.sh  main.c  update_deps.sh
sokol/src/lib/: ephemeris.c  ephemeris.h  sound.c  sound.h  utils.c  utils.h
sokol/src/shaders/: build.sh  build_wasm.sh  mandelbrot.glsl
sokol/src/shaders/compiled/: mandelbrot.glsl.h
sokol/src/sokol/: shell.html
unity/Uriel/: .gitignore  mono_crash.32f7804df4.0.json
unity/Uriel/Assets/: Cube.cs  Uriel.vfx  teapot.fbx
unity/Uriel/Assets/GCode/: output.gcode  test.nc
unity/Uriel/Assets/Materials/: Blue.mat  Bones.mat  Clay.mat  CreatureMap.mat  CreatureVoxel.mat  Field.mat  Green.mat  Grid.mat  Guizmo.mat  Hologram.mat  Hovered.mat  LitSurfaceBuffer.mat  Mandelbrot.mat  Map.renderTexture  MeshProjection.mat  Moon Shadow.mat  Moon.mat  MoonShadow.mat  NewSurfaceShader.shader  Normal.mat  Paint.mat  Particle.mat  Photon.mat  Ray.mat  Red.mat  Selected.mat  Shadow.mat  SimpleVolume.mat  Sky.mat  Sun.mat  SurfaceMandelbrot.mat  UnlitSurface.mat  UnlitVoxel.mat  VaseInterference.mat  VaseSide.mat  Voxel.mat  WIP.mat  Water.mat  Wire.mat  Wireframe.mat  (+2 more)
unity/Uriel/Assets/Models/: ball_1.fbx  ball_35.fbx  ball_5.fbx  ball_6.fbx  box3x3.fbx  chamfer.fbx  cone.fbx  cube_100.fbx  dome_5.fbx  donut.fbx  gyza.fbx  hexagon.fbx  hose.fbx  icosa.fbx  knot.fbx  meta_1.fbx  meta_2.fbx  octa_1.fbx  octa_12.fbx  octa_2.fbx  octa_3.fbx  octa_5.fbx  pentagon.fbx  pill.fbx  pyramid.fbx  ring_1.fbx  ring_5.fbx  ring_500.fbx  ring_square_50.fbx  sphere.fbx  sphere_3.fbx  sphere_32.fbx  sphere_4.fbx  sphere_5_sharp.fbx  sphere_6.fbx  sphere_64.fbx  sphere_7.fbx  sphere_ico_12_sharp.fbx  sphere_octa_12_sharp.fbx  sphere_tetra_12.fbx  (+4 more)
unity/Uriel/Assets/Resources/Breaths/: Adam.asset  MarchingCube.asset  RayTrace.asset  Vase.asset
unity/Uriel/Assets/Resources/Creatures/: Adam.asset
unity/Uriel/Assets/Resources/Engravings/: Adam.asset
unity/Uriel/Assets/Resources/Harbors/: Adam.asset  Eve.asset  Fractal.asset  Heart.asset  Painting.asset  Star.asset
unity/Uriel/Assets/Resources/Lumens/: Adam.asset  Alpha.asset  Core.asset  Eve.asset  Fish.asset  Heart.asset  Hologram.asset  Mandelbrot.asset  MarchingCube.asset  Moon.asset  MoonShadow.asset  RayTracing.asset  ResonanceCascade.asset  Ring.asset  Shadow.asset  Threshold.asset  Vase.asset  Water.asset  XRay.asset
unity/Uriel/Assets/Resources/Prefabs/: Selectable.prefab  Solid.prefab
unity/Uriel/Assets/Resources/Resonances/: Resonance.asset
unity/Uriel/Assets/Resources/Sculptors/: Adam.asset  Eve.asset  Vase.asset
unity/Uriel/Assets/Resources/Sculpts/: Adam.asset
unity/Uriel/Assets/Resources/Skies/: Adam.asset  Alpha.asset  Eve.asset  Heart.asset  Hologram.asset  Mandelbrot.asset  Normal.asset  ResonanceCascade.asset  Ring.asset  Shadow.asset  Water.asset  XRay.asset
unity/Uriel/Assets/Resources/Studios/: Adam.asset
unity/Uriel/Assets/Resources/Volumes/: Adam.prefab
unity/Uriel/Assets/Resources/WaveEmitters/: Wave.prefab
unity/Uriel/Assets/Scenes/: Adam.unity  Curves.unity  Dev.unity  Displacement.unity  Exodus.unity  Fractal.unity  GCode.unity  Hologram.unity  Mandelbrot.unity  MarchingCubes.unity  MeshProjection.unity  Normal.unity  RayTracing.unity  ResonanceCascade.unity  SampleScene.unity  Shadow.unity  Sky.unity  Studio.unity  Vase.unity  Water.unity  XRay.unity
unity/Uriel/Assets/Scripts/Behaviours/: Adam.cs  AxisGizmo.cs  Bezier.cs  BreathBuffer.cs  CameraController.cs  CameraScaled.cs  CelestialSphere.cs  Combine.cs  CommandHistory.cs  Constellation.cs  (+52 more)
unity/Uriel/Assets/Settings/: PC_RPAsset.asset  SampleSceneProfile.asset  UniversalRenderPipelineGlobalSettings.asset
unity/Uriel/Assets/UI/: LumenInspector.uxml  Studio.uxml  VolumePicker.uxml
unity/Uriel/Assets/UI Toolkit/: PanelSettings.asset
unity/Uriel/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
unity/Uriel/UIElementsSchema/: UIElements.xsd  UnityEditor.Experimental.GraphView.xsd  UnityEditor.VFX.UI.xsd
uriel/: DS1302Unix.cpp  DS1302Unix.h  clock.h  uriel.ino
uriel/.theia/: launch.json
uriel/celestial_clock/: EphemerisReader.h  celestial_clock.ino  ephemeris.h
utils/: PlatonicSolids.cginc  eph.py  ephemeries.py  grid.py  moon.py  platonic_solid_gen.py
webgpu/: PlatonicSolids.cginc  intex.html
(+164 files in other folders)
